# QuizGenerator

./: .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  LESSONS_LEARNED-adding_questions.md  README.md  generate_quiz.py  grade_assignments.py  grade_from_qr.py  performance_test.py  pyproject.toml  ruff.toml  todo.md
.githooks/: pre-commit
Autograder/: assignment.py  grader.py  logging.yaml
QuizGenerator/: __init__.py  __main__.py  canvas_import.py  constants.py  contentast.py  generate.py  grade.py  logging.yaml  misc.py  mixins.py  performance.py  qrcode_generator.py  question.py  quiz.py  regenerate.py  test.py  typer_cli.py  typst_utils.py  yaml_question.py
documentation/: GRADING_GUIDE.md  LESSONS_LEARNED-adding_questions.md  README.md  WEB_UI_INTEGRATION.md  claude_todo.md  custom_questions.md  first_5_minutes.md  getting_started.md  question_builder_ui.html  question_builder_ui.md  quickstart.md  yaml_config_guide.md
example_files/: all_classes.yaml  cst334.yaml  cst334_ungraded_practice.yaml  cst463.yaml  example_exam.yaml  scratch.yaml  yaml_question_exam.yaml  yaml_question_example.yaml  yaml_question_matching.yaml
examples/: README.md  example_question.py  web_ui_integration_example.py
lms_interface/: __init__.py  backends.py  canvas_interface.py  classes.py  helpers.py  interfaces.py  privacy.py
scripts/: check_repo_hygiene.sh  check_version_bump_vendoring.sh  git_bump.sh  install_git_hooks.sh  lms_release_source.toml  lms_vendor_tooling.toml  print.scpt  print.sh  question_builder_ui.py  vendor_lms_for_release.py  vendor_lms_interface.py
tests/: test_answer_types.py  test_caching_workload.py  test_canvas_import.py  test_canvas_ordering.py  test_canvas_payloads.py  test_cli_compat.py  test_cli_e2e.py  test_contentast.py  test_contentast_render.py  test_dependency_check.py  test_enum_warnings.py  test_error_handling.py  test_fromgenerator.py  test_generate_cli.py  test_generate_quiz_flow.py  test_logging_setup.py  test_mlfq_pdf_aid.py  test_qr_roundtrip.py  test_question_flow.py  test_question_lifecycle.py  (+12 more)
(+80 files in other folders)
