[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "QuizGenerator"
version = "0.1.0"
description = "A collection of tools for teaching and grading"
authors = [
    {name = "Sam Ogden", email = "samuel.s.ogden@gmail.com"},
]
requires-python = ">=3.12"


dependencies = [
    "Jinja2==3.1.3",
    "python-dotenv==1.0.1",
    "PyYAML==6.0.1",
    "requests==2.32.2",
    "pandas",
    "pypandoc~=1.6.3",
    "pytablewriter~=1.2.0",
    "openai",
    "fuzzywuzzy",
    "colorama",
    "anthropic",
    "pylatex>=1.4.2",
    "docker>=6.1.3",
    "matplotlib",
    "lms_interface"
]

[tool.uv.sources]
lms_interface = { path = "lms_interface" }

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["QuizGenerator"]

[tool.hatch.metadata]
allow-direct-references = true
